Cluster/DBSCAN/x64/Debug/DBSCAN.log
  ANDROID_HOME=C:\\Microsoft\AndroidSDK\25
  ANDROID_SDK_ROOT=C:\\Microsoft\AndroidSDK\25
  ANT_HOME=
  JAVA_HOME=C:\Program Files\Android\jdk\jdk-8.0.302.8-hotspot\jdk8u302-b08
  NDK_ROOT=C:\\Microsoft\AndroidNDK\android-ndk-r23c
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppBuild.targets(517,5): warning MSB8004: Output Directory does not end with a trailing slash.  This build instance will add the slash as it is required to allow proper evaluation of the Output Directory.
  pch.h
  algoWrapper.cpp
  In file included from algoWrapper.cpp:1:
./DBSCAN.cpp(46,11): warning : unused variable 'rightTopPoint' [-Wunused-variable]
      Point rightTopPoint = screenRegion.getPoint(0, 1);
            ^
algoWrapper.cpp(66,31): warning : 'convertRect' has C-linkage specified, but returns user-defined type 'ImgCluster::Rectangle' which is incompatible with C [-Wreturn-type-c-linkage]
          ImgCluster::Rectangle convertRect(struct Rectangle rect) {
                                ^
algoWrapper.cpp(70,28): warning : 'convertVector' has C-linkage specified, but returns user-defined type 'ImgCluster::Images' (aka 'vector<ImgCluster::ImageNode>') which is incompatible with C [-Wreturn-type-c-linkage]
          ImgCluster::Images convertVector(struct ImgArray images) {
                             ^
algoWrapper.cpp(129,13): warning : delete called on non-final 'DBSCAN' that has virtual functions but non-virtual destructor [-Wdelete-non-abstract-non-virtual-dtor]
              delete ((DBSCAN*)algoClass);
              ^
  4 warnings generated.
  clusterInterface.cpp
  DBSCAN.cpp
DBSCAN.cpp(46,11): warning : unused variable 'rightTopPoint' [-Wunused-variable]
      Point rightTopPoint = screenRegion.getPoint(0, 1);
            ^
  1 warning generated.
  ld: error: duplicate symbol: radiusSearch(std::__ndk1::vector<ImgCluster::ImageNode, std::__ndk1::allocator<ImgCluster::ImageNode> > const&, int, double, std::__ndk1::vector<std::__ndk1::pair<int, double>, std::__ndk1::allocator<std::__ndk1::pair<int, double> > >&)
  >>> defined at DBSCAN.cpp:152 (.\DBSCAN.cpp:152)
  >>>            x64\Debug\algoWrapper.o:(radiusSearch(std::__ndk1::vector<ImgCluster::ImageNode, std::__ndk1::allocator<ImgCluster::ImageNode> > const&, int, double, std::__ndk1::vector<std::__ndk1::pair<int, double>, std::__ndk1::allocator<std::__ndk1::pair<int, double> > >&))
  >>> defined at DBSCAN.cpp:152
  >>>            x64\Debug\DBSCAN.o:(.text+0xBA0)
  ld: error: duplicate symbol: ImgCluster::Point::toVector()
  >>> defined at clusterInterface.h:122 (.\clusterInterface.h:122)
  >>>            x64\Debug\algoWrapper.o:(ImgCluster::Point::toVector())
  >>> defined at clusterInterface.h:122 (.\clusterInterface.h:122)
  >>>            x64\Debug\DBSCAN.o:(.text+0xF0)
  ld: error: duplicate symbol: ImgCluster::Point::operator-(ImgCluster::Vector&)
  >>> defined at clusterInterface.h:119 (.\clusterInterface.h:119)
  >>>            x64\Debug\algoWrapper.o:(ImgCluster::Point::operator-(ImgCluster::Vector&))
  >>> defined at clusterInterface.h:119 (.\clusterInterface.h:119)
  >>>            x64\Debug\DBSCAN.o:(.text+0x0)
  ld: error: duplicate symbol: ImgCluster::Point::operator-(ImgCluster::Point&)
  >>> defined at clusterInterface.h:121 (.\clusterInterface.h:121)
  >>>            x64\Debug\algoWrapper.o:(ImgCluster::Point::operator-(ImgCluster::Point&))
  >>> defined at clusterInterface.h:121 (.\clusterInterface.h:121)
  >>>            x64\Debug\DBSCAN.o:(.text+0xA0)
  ld: error: duplicate symbol: ImgCluster::Point::operator+(ImgCluster::Vector&)
  >>> defined at clusterInterface.h:120 (.\clusterInterface.h:120)
  >>>            x64\Debug\algoWrapper.o:(ImgCluster::Point::operator+(ImgCluster::Vector&))
  >>> defined at clusterInterface.h:120 (.\clusterInterface.h:120)
  >>>            x64\Debug\DBSCAN.o:(.text+0x50)
  ld: error: duplicate symbol: DBSCAN::findTargetImgList(ImgCluster::Rectangle const&)
  >>> defined at DBSCAN.cpp:40 (.\DBSCAN.cpp:40)
  >>>            x64\Debug\algoWrapper.o:(DBSCAN::findTargetImgList(ImgCluster::Rectangle const&))
  >>> defined at DBSCAN.cpp:40
  >>>            x64\Debug\DBSCAN.o:(.text+0x310)
  ld: error: duplicate symbol: DBSCAN::init(std::__ndk1::vector<ImgCluster::ImageNode, std::__ndk1::allocator<ImgCluster::ImageNode> > const&, unsigned int, unsigned int)
  >>> defined at DBSCAN.cpp:68 (.\DBSCAN.cpp:68)
  >>>            x64\Debug\algoWrapper.o:(DBSCAN::init(std::__ndk1::vector<ImgCluster::ImageNode, std::__ndk1::allocator<ImgCluster::ImageNode> > const&, unsigned int, unsigned int))
  >>> defined at DBSCAN.cpp:68
  >>>            x64\Debug\DBSCAN.o:(.text+0x4E0)
  ld: error: duplicate symbol: DBSCAN::dbscan(ImgCluster::Rectangle&, double, int)
  >>> defined at DBSCAN.cpp:115 (.\DBSCAN.cpp:115)
  >>>            x64\Debug\algoWrapper.o:(DBSCAN::dbscan(ImgCluster::Rectangle&, double, int))
  >>> defined at DBSCAN.cpp:115
  >>>            x64\Debug\DBSCAN.o:(.text+0x6A0)
  ld: error: duplicate symbol: DBSCAN::iterate(ImgCluster::Rectangle const&)
  >>> defined at DBSCAN.cpp:92 (.\DBSCAN.cpp:92)
  >>>            x64\Debug\algoWrapper.o:(DBSCAN::iterate(ImgCluster::Rectangle const&))
  >>> defined at DBSCAN.cpp:92
  >>>            x64\Debug\DBSCAN.o:(.text+0xA40)
  ld: error: duplicate symbol: DBSCAN::idxToPos(std::__ndk1::vector<std::__ndk1::vector<int, std::__ndk1::allocator<int> >, std::__ndk1::allocator<std::__ndk1::vector<int, std::__ndk1::allocator<int> > > >, std::__ndk1::vector<ImgCluster::ImageCluster, std::__ndk1::allocator<ImgCluster::ImageCluster> >)
  >>> defined at DBSCAN.cpp:24 (.\DBSCAN.cpp:24)
  >>>            x64\Debug\algoWrapper.o:(DBSCAN::idxToPos(std::__ndk1::vector<std::__ndk1::vector<int, std::__ndk1::allocator<int> >, std::__ndk1::allocator<std::__ndk1::vector<int, std::__ndk1::allocator<int> > > >, std::__ndk1::vector<ImgCluster::ImageCluster, std::__ndk1::allocator<ImgCluster::ImageCluster> >))
  >>> defined at DBSCAN.cpp:24
  >>>            x64\Debug\DBSCAN.o:(.text+0x130)
  ld: error: duplicate symbol: vtable for DBSCAN
  >>> defined at algoWrapper.cpp
  >>>            x64\Debug\algoWrapper.o:(vtable for DBSCAN)
  >>> defined at DBSCAN.cpp
  >>>            x64\Debug\DBSCAN.o:(.data.rel.ro+0x0)
  clang: error: linker command failed with exit code 1 (use -v to see invocation)
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Application Type\Android\3.0\Android.Common.targets(125,5): error MSB6006: "clang.exe" exited with code 1.
